--- a/lekcii/mathanalys.tex
+++ b/lekcii/mathanalys.tex
@@ -99,6 +99,7 @@
 \newpage
 
 \hypertarget{t1}{Некоторые} записи по матанализу.
+
 \tableofcontents
 
 \newpage
@@ -439,7 +440,7 @@ $(x-y)$ - евклидово расстояние.
 \end{proof}
 
 \begin{theorem}
-    Пусть $f:\RR^n\rightarrow \RR$, $f$ - гладкая на $G$ - открытое(???). Я нихуя не могу прочитать, что тут написано.
+    Пусть $f:\RR^n\rightarrow \RR$, $f$ - гладкая на $G$ - открытое множестве, причём частные производные сущуствуют и непрерывны в каждой точке (условно говоря, $f$ гладкая). Предположим, что точка $x^0$ - локальный максимум или минимум. Тогда $\grad f|_{x^0}\equiv 0$.
 \end{theorem}
 
 \begin{proof}
@@ -487,14 +488,14 @@ $(x-y)$ - евклидово расстояние.
 
 Заканчиваем доказательство теоремы об обратном отображении. Мы уже установили, что $f$ - билипшицева, что $f$ в какой-то окрестность $f(V_{x_0})$ содержит $V_{g_0}$, а также, что обратное отображение $g$ по крайней мере существует в какой-то окрестности. \ 
 
-Осталось лишь доказать один небольшой оставшийся момент. Пусть $f$ - гладкая в $x^0$, тогда мы можем расписать $f(x)=f(x^0)+A(x-x^0)+R(x)$, где $|R(x)|=0(|x-x^0|)$ (модули над векторами с данного момента - естественно, нормы). Воспользуемся тем, что любая точка $y$, достаточно близкая к $y^0$, то, по доказанному ране, у неё есть прообраз. Напишем тогда в виду прообразов: $y=y^0+A(g(y)-g(y^0))+R(g(y))$. Она выполнена для любого $y$ в некоторой окрестности $y^0$. \ 
+Осталось лишь доказать один небольшой оставшийся момент. Пусть $f$ - гладкая в $x^0$, тогда мы можем расписать $f(x)=f(x^0)+A(x-x^0)+R(x)$, где $|R(x)|=o(|x-x^0|)$ (модули над векторами с данного момента - естественно, нормы). Воспользуемся тем, что любая точка $y$, достаточно близкая к $y^0$, то, по доказанному ране, у неё есть прообраз. Напишем тогда ввиду прообразов: $y=y^0+A(g(y)-g(y^0))+R(g(y))$. Она выполнена для любого $y$ в некоторой окрестности $y^0$. \ 
 
 Нам хотелось бы выразить $g(y^0)$. Рассмотрим $A(g(y)-g(y^0))=y-y^0-R(g(y))$. Это равенство двух векторов $\RR^n$, матрица $A$ невырожденная, потому у неё есть обратная, применим это знание: $g(y)-g(y^0)=A^{-1}(y-y^0)-A^{-1}(R(g(y)))$. Надо оценить остаток, так как всё остальное уже хорошее. Из того, что мы уже знаем, $\forall \varepsilon>0, V_{x^0}^\varepsilon |R(x)|\leq \varepsilon |x-x^0|$ (кажется, в некоторой окрестности, поэтому размер окрестности должен быть другой переменной). Тогда $|R(g(y|\leq \varepsilon |g(y)-g(y^0)|$. Мы знаем, что $f$ билипшицева, как и обратная, поэтому продолжаем неравенство $\leq \varepsilon C |y-y^0|$. Но у нас изначально есть $|A^{-1}(R(g(y)))|\leq ||A^{-1}||\varepsilon C |y-y^0|$. И теперь, собирая всё назад, получаем, что $g(y)=g(y^0)+A^{-1}(y-y^0)+o(|y-y^0|)$, это нам и нужно было: дифференцируемость в $y^0$ и явный дифференциал. \ 
 
 Попытаемся обобщить Формулу Тейлора для многих переменных. Для начала, разберёмся с тем, как дифференцировать композицию функций многих переменных. Пусть $f:\RR^n\rightarrow \RR^m$, $g:\RR^m\rightarrow \RR^k$, $f$ - гладкая в $x^0$, $g$ - гладкая в $f(x^0)$, тогда $g(f(x^0))$ - гладкая в $x^0$, дифференциал - $BA$. 
 
 \begin{exl}
-    $f:\RR^n\rightarrow \RR$, $f(x_1, \ldots, x_n)$, $g_k= g_k(x_1, \ldots, x_n)$ $(1\leq k\leq n)$, $g=(g_1, \ldots, g_n)$. Тогда $f(g_1(x_1, \ldots, x_n), \ldots, g_n(x_1, \ldots, x_n))=F(x_1, \ldots, x_n)$, и 
+    $f:\RR^n\rightarrow \RR$, $f(x_1, \ldots, x_n)$, $g_k= g_k(x_1, \ldots, x_n)$ $(1\leq k\leq n)$, $g=(g_1, \ldots, g_n)$. Тогда $f(g_1(x_1, \ldots, x_n), \ldots, g_n(x_1, \ldots, x_n))=F(x_1, \ldots, x_n)$, $\tilde{x} = (x_1, \ldots, x_n)$ и 
     
 \begin{equation*}
     \begin{aligned}
@@ -504,7 +505,8 @@ $(x-y)$ - евклидово расстояние.
             & = \sum_i \frac{\partial f}{\partial x_i}\frac{\partial g_i}{\partial x_1} =^? \sum_i \frac{\partial f}{\partial g_i}\frac{\partial g_i}{\partial x_1}
     \end{aligned}
 \end{equation*}
-    $f=(\frac{\partial f}{\partial x_1}, \ldots, \frac{\partial f}{\partial x_n})$, $BA=\biggl(\sum_{k=1^n}^n\biggr)$
+
+    Последнее равенство - просто вопрос обозначений. А в итоге у нас просто получается предпоследнее. $f=(\frac{\partial f}{\partial x_1}, \ldots, \frac{\partial f}{\partial x_n})$, $BA=\biggl(\sum_{k=1^n}^n\frac{\partial f}{\partial x_k}\cdot \frac{\partial g_k}{\partial x_1}, \ldots, \sum_{k=1}^n \frac{\partial f}{\partial x_k}\cdot \frac{\partial g_k}{\partial x_l}, \ldots \biggr)$
 \end{exl}
 
 \begin{exl}
@@ -514,9 +516,9 @@ $(x-y)$ - евклидово расстояние.
     \]
 \end{exl}
 
-Формула Лагранжа. Пусть $f:\RR^n\rightarrow \RR$, $(x_1, \ldots, x_n)$, $(y_1, \ldots, y_n)$, $f(y_1, \ldots, y_n)- f(x_1, \ldots, x_n)$. \ 
+Формула Лагранжа. Пусть $f:\RR^n\rightarrow \RR$, $(x_1, \ldots, x_n)$, $(y_1, \ldots, y_n)$, мы хотим научиться как-то выражать $f(y_1, \ldots, y_n)- f(x_1, \ldots, x_n)$ через производную в какой-то точке посередине. \ 
 
-Путь $x(t)= x+th$, $0\leq t\leq 1$, $h=y-x$ (покоординатно). Тогда $\varphi(t) := f(x+th)=f(x_1+t(y_1-x_1), \ldots, x_n+t(y_n-x_n))= f(x_1+th_1, \ldots, x_n+th_n)$, $f(y)-f(x)= \varphi(1)-\varphi(0)= \varphi'(\xi)$, $\xi\in\in[0, 1]$, 
+Путь $x(t)= x+th$, $0\leq t\leq 1$, $h=y-x$ (покоординатно). Тогда $\varphi(t) := f(x+th)=f(x_1+t(y_1-x_1), \ldots, x_n+t(y_n-x_n))= f(x_1+th_1, \ldots, x_n+th_n)$, $f(y)-f(x)= \varphi(1)-\varphi(0)= \varphi'(\xi)$, $\xi\in[0, 1]$ (по формуле одной переменной), 
 \[
     \varphi'(t)= \frac{\partial f}{\partial x_1}\bigg|_{x(t)}(y_1-x_1)+\ldots+\frac{\partial f}{\partial x_n}\bigg|_{x(t)}(y_n-x_n)= (\grad f, y-x). 
 \]
@@ -529,10 +531,9 @@ $(x-y)$ - евклидово расстояние.
 
 А теперь возьмём производную ещё раз. 
 \[
-    \varphi''(t)= (\varphi'(t))'= \sum_{k=1}^n\frac{\partial f}{\partial x_1 \partial x_k}(y_k-x_k)(?)=?
+    \varphi''(t)= (\varphi'(t))'= \sum_{k=1}^n\frac{\partial f}{\partial x_1 \partial x_k}(y_k-x_k)(y_1-x_1)+\ldots=\sum_{q\leq k, l \leq n} \frac{\partial f}{\partial x_l \partial x_k}\cdot (y_k-x_k)(y_l-x_l) = \sum_{1\leq k, l \leq n} \frac{\partial f}{\partial x_l \partial x_k}\cdot h_k h_l, 
 \]
-
-(не закончено и плохо составлено)
+такая вещь называется \textit{квадратичной формой}. Теперь для получения формулы Тейлора $n$-го порядка, нам нужно кучу раз дифференцировать, и будет всё это состоять из всевозможных переборов приращений по различным переменным. Закончилась лекция вспоминаниями о том, что такое квадратичная форма, но за этим лучше перейти в лекции по алгебре.
 
 \section{Лекция 7.}
 
@@ -779,131 +780,17 @@ $f\in C^1$, $f'(x)=-\frac{F'_x(x, f(x))}{F_y'(x, f(x))}$.
 
 Перейдём теперь к теме \textit{условные экстремумы}. Пусть $f=f(x_2, \ldots, x_n)$, $G\subset \RR^n$, $F\rightarrow \RR$. Если у нас есть набор $f_i(x_1, \ldots, x_n)=0$ при $1\leq i\leq m$, то хотелось бы, чтобы $m\leq n$. Тогда мы можем сократить количество переменных. Ну, Юрий Сергеевич начал рисовать картиночки, я так не умею. Пусть у нас есть поверхность $S$ и $f(x,y,z)$, и мы хотим найти экстремум по $S$ - $f|_S$. Пусть у нас есть точка $(x_0, y_0, z_0)\in S$, тогда мы хотим, чтобы в точке было касание. Если в общем и целом, то нас инетересует касание, мы рассматриваем параметризацию от одной переменной $t$ по кривой на поверхности, и дальше с ней чего-то там делаем.
 
+\section{Лекция 11.}
 
+Продолжаем с условными экстремумами. Немного не формальные рассуждения: у нас есть функция $f(x, y, z)$, поверхность $S$, заданная уравнением $f_1(x, y, z)$, и вот
+
+Пусть есть кривая $(x(t), y(t), z(t))\in S$ такая, что при $t=0$ получается $x_0, y_0, z_0$. Введём $\psi(t)=f(x(t), y(t), z(t))$, тогда $\psi'(0)=0$, $\psi'(t)=\frac{\partial f}{\partial x}x'(t)+\frac{\partial f}{\partial y}y'(t)+\frac{\partial f}{\partial z}z'(t)$, что опять равно нулю в нуле. Эта вещь равносильна утверждению о том, что $\grad f$ перпендикулярен касательной плоскости $T_s(x_0, y_0, z_0)t=0$. Мы знаем, что $\grad \perp$ поверхности уровня $(f(x, y, z)=f(x_0, y_0, z_0))$, потому и получаем. 
+
+Давайте теперь рассмотрим общий случай размерностей. У нас есть функция $n$ переменных и поверхность, заданная $m$ соотношениями: $f=f(x_1, \ldots, x_n)$, $S - \rightarrow f_k(x_1, \ldots, x_n)=0$ - система из $m$ уравнений ($1\leq k\leq m$). (?) \ 
+
+Пусть мы ищем $f|_s$ - имеет экстремум в $x^0$, тогда при $x(t)\in S$, $x(0)=x^0$, рассматриваем опять $\psi(t)=f(x(t))$, о которой мы уже знаем, что значение производной в нуле равно нулю, и равно $(\grad|_{t=0}, x'(0))$. Тогда для любой $x(t)\in S$, (постоянные сбои в связи, придётся пересматривать)
 
 \newpage
-
-\section{Основные теоретические факты для контрольных.}
-
-(На мой субъективный выбор). \ 
-
-\subsection{Интегралы.}
-
-Интегралы бывают: \ 
-
-\begin{itemize}
-    \item \textit{неопределёнными} - совокупность всех первообразных функций;
-    \item \textit{определённым} - предел интегральных сумм;
-    \item \textit{несобственным}, если он определённый и либо область определения бесконечна, либо если подынтегральная функция неограничена в окрестности некоторых точек области интегрирования. 
-\end{itemize}
-
-Вычисляем первообразную самыми разными способами: \
-
-\begin{itemize}
-    \item \textit{угадывание} - почему нет;
-    \item \textit{введение нового аргумента} - если $\int g(x)dx = G(x)+C$, то $\int g(u)du = G(u)+C$, где $u = \varphi(x)$ - непрерывно дифференцируемая функция;
-    \item \textit{разложение} - по линейности;
-    \item \textit{подстановка} - если $g(x)$ - непрерывная, то, полагая, что $x=\varphi(t)$, где $\varphi(t)$ непрерывна вместе со своей производной, получим, что $\int g(x)dx = \int g(\varphi(t))\varphi'(t)dt$. 
-    \item \textit{по частям} - если $u$ и $v$ - некоторые дифференцируемые функции от $x$, то $\int udv = uv - \int vdu$. 
-\end{itemize}
-
-Также неплохо бы выучить хотя бы немного базовых интегралов. \ 
-
-Несобственные интегралы могут сходиться или нет. Рассмотрим свойства сходимости: \ 
-
-\begin{stat}
-    (Критерий Коши сходимости несобственного интеграла). Если функция $x\mapsto f(x)$ определена на промежутке $[a, \omega[$ и интегрируема на любом отрезке $[a, b]$, лежащем внутри, то интеграл $\int_a^\omega f(x)dx$ сходится тогда и только тогда, когда для любого $\varepsilon>0$ можно указать $B\in [a, \omega[$ так, что при юлбых $b_1, b_2\in [a, \omega[$ таких, что $B<b_1, b_2$ имеет мечто соотношение 
-    \[
-        \bigg| \int_{b_1}^{b_2}f(x)dx\bigg| < \varepsilon. 
-    \]
-\end{stat}
-
-\begin{defn}
-    Про несобственный интеграл $\int_a^\omega f(x)dx$ говорят, что он \textit{сходится абсолютно}, если сходится интеграл $\int_a^\omega |f|(x)dx$. 
-\end{defn}
-
-\begin{stat}
-    Если функция $f$ определена на промежутке, интегрируема на каждом его отрезке, и неотрицательна на нём, то несобственный интеграл существует в том и только том случае, когда функция ограничена на $[a, \omega[$. 
-\end{stat}
-
-\begin{theorem}
-    (Теорема сравнения). Пусть функции $f(x)$ и $g(x)$ определены на промежутке $[a, \omega[$ и интегрируемы на любом его отрезке. Если на промежутке $0\leq f(x) \leq g(x)$, то из сходимости интеграла по $g$ следует сходимость интеграла по $f$. 
-\end{theorem}
-
-\begin{defn}
-    Несобственный интеграл $\int_a^\omega f(x;\alpha)dx$ называется равномерно сходящимся на $E$, если 
-    \[
-        \forall \varepsilon>0 \exists t\in(a;b) \forall \xi \in [t, \omega) \forall \alpha \in E \mapsto \bigg| \int_\xi^\omega f(x;\alpha)dx \bigg|<\varepsilon.
-    \]
-\end{defn}
-
-\begin{theorem}
-    (Признак Вейеерштрасса). Если подынтегральная функция в параметрическом интеграле может быть ограничена функцией одной переменной сверху, и интеграл от данной функции сходится, то и изначальный интеграл сходится.
-\end{theorem} \
-
-\begin{theorem}
-    (Признак Дирихле). Достаточное условие равномерной сходимости интеграла вида $\int_a^{+\infty}f(x)g(x)dx$. Если выполнены следующие условия: 
-
-    \begin{itemize}
-        \item первообразная $f(x)$ ограничена; 
-        \item $g(x)$ дифференцируема, больше нуля, её производная отрицательна; 
-        \item $\lim_{x\rightarrow +\infty} g(x)=0$. 
-    \end{itemize}
-
-    Тогда $\int_a^{+\infty}f(x)g(x)dx$ сходится.
-\end{theorem}
-
-\subsection{Кривые.}
-
-\begin{defn}
-    \textit{Кривые в $\RR^n$} - непрерывное отображение $f:[a, b]\rightarrow \RR^n$.
-\end{defn}
-
-Нас, в основном, интересуют прямые, которые можно непрерывно нарисовать одной линией, если говорить на простейшем языке. \ 
-
-Если непрерывная кривая $\gamma$ задана параметрически: $x_1=f_1(t)$, $x_2=f_2(t)$, \dots, то можно найти её длину:
-\[
-    \int_a^b\sqrt{(f_1')^2(x)+\ldots+(f_n')^2(x)}dx. 
-\]
-Естественно, все $f_i$ должны быть дифференцируемы на нужном промежутке.
-
-\subsection{Многомерный анализ.} 
-
-\begin{defn}
-    $f$ \textit{дифференцируема} в точке $(x_1, \ldots, x_m)$, если $f(y)=f(x)+L(y-x)+o(||x-y||)$, где $L$ - линейное отображение $\RR^m\rightarrow \RR$, причём однородное, то есть, $L(0)=0$.
-\end{defn}
-
-\begin{defn}
-    Это линейное отображение $L$ называется \textit{дифференциалом} в точке $x$.
-\end{defn}
-
-\begin{remark}
-    Зачастую ищем по определению, можно по ласт теореме из подтемы.
-\end{remark}
-
-\begin{defn}
-    \textit{Частная производная}. Пусть имеется $f:\RR\rightarrow \RR$, $f(x_1, \ldots, x_n)$, $x^0=(x_1^0, \ldots, x_n^0)$. Тогда частная производная по $x_k $, $f(x_1^0, \ldots, x_{k-1}^0, x, x_{k+1}^0, \ldots, x_m^0)=g(x), g'(x_k^0)$. $\frac{\partial f}{\partial x_k}\bigg|_{x^0}:=g'(x_k^0)=\lim_{\varepsilon\rightarrow 0}\frac{f(\ldots, x_k^0+\varepsilon, \ldots)-f(\ldots)}{\varepsilon}$. 
-\end{defn}
-
-\begin{defn}
-    \textit{Производная по направлению}. Пусть направление задаётся $e\in\RR^n$, $||e||=1$, $f$ - дифференцируема по направлению $e$, если $g(t)=f(x^0+te)$, $t\in\RR$ и существует $g'(0)$, то производная по направлению $e$ - $g'(0)=\lim_{t\rightarrow 0}\frac{f(x^0+te)-f(x^0)}{t}$. 
-\end{defn}
-
-(тут хочется теорему, которая теорема 2.) \\
-
-\begin{theorem}
-    Пусть у нас есть отображение $f:\RR^n\rightarrow \RR^m$, $V_{x_0}\rightarrow \RR^m$, причём существуют все частные производные в $V_{x^0}$ и они непрерывные в $x^0$. Тогда $f$ дифференцируема в точке $x^0$. 
-\end{theorem} \ 
-
-(тут хочется теорему, которая теорема 4.) \\
-
-\begin{theorem}
-    Если функция $E\rightarrow \RR$, определённая на множестве $E\subset \RR^m$, дифференцируема во внутренней точке $x\in E$ этого множества, то в этой точке функция имеет все частные производные по каждой переменной и дифференциал функции однозначно определяется этими частными производными в виде
-    \[
-      df(x)h=\frac{\partial f}{\partial x_1}(x)h_1+\ldots+\frac{\partial f}{\partial x_m}(x)h_m. 
-    \]
-  \end{theorem}
-
 
 
 \end{document}
